Add initial transactions data in CSV format

--- a/Week5/4.1_Multithreading.md
+++ b/Week5/4.1_Multithreading.md
@@ -98,45 +98,55 @@ Task 2 done
 Task 3 done
 Task 4 done
 ```
-
 ---
 
-## 🔹 Multithreading vs Multiprocessing
-- **Multithreading** → Best for I/O-bound tasks.  
-- **Multiprocessing** → Best for CPU-bound tasks (parallel execution).  
-
+## 🔹 Using `concurrent.futures` (Without Lock (Race Condition))
 ```python
-# Rule of thumb:
-# I/O tasks → threading / async
-# CPU tasks → multiprocessing
+from concurrent.futures import ThreadPoolExecutor
+import random,time
+
+balance = 0
+
+def deposit():
+    global balance
+    for _ in range(100000):
+        time.sleep(random.random() * 0.00001)  # random tiny delay
+        balance += 1   # ⚠️ Not thread-safe
+        
+with ThreadPoolExecutor(max_workers=10) as executor:
+    for _ in range(10):   # 10 threads depositing
+        executor.submit(deposit)
+
+print("Final Balance WITHOUT Lock:", balance, "(Expected: 1,000,000)")
 ```
 
+
 ---
 
-## 🔹 Real-World Example: Downloading Multiple URLs
+## 🔹 Using `concurrent.futures` (With Lock (Thread-Safe))
 ```python
+from concurrent.futures import ThreadPoolExecutor
 import threading
-import requests
+import random,time
 
-urls = [
-    "https://www.example.com",
-    "https://httpbin.org/get",
-    "https://api.github.com"
-]
+balance = 0
+lock = threading.Lock()
 
-def fetch(url):
-    response = requests.get(url)
-    print(f"{url}: {response.status_code}")
+def deposit_with_lock():
+    global balance
+    for _ in range(100000):
+        time.sleep(random.random() * 0.00001)  # random tiny delay
+        with lock:  # ensures only one thread modifies at a time
+            balance += 1
+        
 
-threads = []
-for url in urls:
-    t = threading.Thread(target=fetch, args=(url,))
-    t.start()
-    threads.append(t)
+with ThreadPoolExecutor(max_workers=10) as executor:
+    for _ in range(10):   # 10 threads depositing
+        executor.submit(deposit_with_lock)
 
-for t in threads:
-    t.join()
+print("Final Balance WITH Lock:", balance, "(Expected: 1,000,000)")
 ```
+
 
 ---
 
