--- a/Week5/4.2_Multithreading_FileProcessing.md
+++ b/Week5/4.2_Multithreading_FileProcessing.md
@@ -88,9 +88,11 @@ process_file_threaded("data.txt")
 import concurrent.futures
 import threading
 import csv
+import time
 
 def process_transaction(row):
     account, amount = row
+    time.sleep(0.01)
     return f"{threading.current_thread().name}: Account {account} processed {amount}"
 
 with open("transactions.csv", "r") as f:
@@ -117,6 +119,71 @@ ThreadPoolExecutor-0_1: Account 1002 processed 300
 ThreadPoolExecutor-0_2: Account 1003 processed 700
 ```
 
+---
+## 🔹 Real-World Example: Processing Transactions - Without Lock (Race Condition)
+```python
+
+import concurrent.futures
+import threading
+import csv
+import time
+
+balances = {}  # shared dictionary
+
+def deposit(row):
+    account, amount = row
+    account = int(account)
+    amount = int(amount)
+
+    # ⚠️ Race condition: multiple threads updating same account
+    old_balance = balances.get(account, 0)
+    time.sleep(0.00001)   # force context switch
+    balances[account] = old_balance + amount
+
+with open("transactions.csv", "r") as f:
+    reader = list(csv.reader(f))[1:]  # skip header
+
+with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:
+    executor.map(deposit, reader)
+
+print("Final Balances (without lock):")
+for acc, bal in list(balances.items())[:10]:  # show first 10 accounts
+    print(acc, bal)
+```
+---
+## 🔹 Real-World Example: Processing Transactions - With Lock (Thread-Safe)
+```python
+
+import concurrent.futures
+import threading
+import csv
+import time
+
+balances = {}
+lock = threading.Lock()
+
+def deposit(row):
+    account, amount = row
+    account = int(account)
+    amount = int(amount)
+
+    with lock:  # ✅ only one thread updates balances at a time
+        old_balance = balances.get(account, 0)
+        time.sleep(0.00001)   # simulate I/O / force switch
+        balances[account] = old_balance + amount
+
+with open("transactions.csv", "r") as f:
+    reader = list(csv.reader(f))[1:]  # skip header
+
+with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:
+    executor.map(deposit, reader)
+
+print("Final Balances (with lock):")
+for acc, bal in list(balances.items())[:10]:  # show first 10 accounts
+    print(acc, bal)
+
+
+```
 ---
 
 ## 🔹 When to Use Multithreading for Files
